# jaato

./: .env.example  CALCULATOR_PLUGIN_DOCUMENTATION_REVIEW.md  CLAUDE.md  README.md  artifact_tracker_assessment.md  demo.yaml  permissions.example.json  profile_cli.py  pyproject.toml  rename_actor_to_channel.py  requirements.txt  test_calculator_plugin.py  test_failures_assessment.md  test_long_running.py  test_mcp_lifecycle.py  test_memory_plugin.py
cli_vs_mcp/: cli_mcp_harness.py
demo-scripts/: README.md  record_all.sh  run_demo.py
docs/: SEARCH_README.md  add_lunr_to_html.py  agent-profiles.md  architecture.md  gcp-setup.md  generate_search_index.py  plugin-icons.md
docs/api/: index-persona-based.html  index.html  subagent_ui_hooks.html
docs/api/api-reference/: index.html  jaato-client.html  plugin-registry.html  types.html
docs/api/contributing/: architecture.html  index.html
docs/api/core-concepts/: client.html  plugins.html  providers.html  tools.html
docs/api/getting-started/: quickstart.html
docs/api/guides/: mcp-integration.html  permissions.html  tool-plugins.html
docs/design/: background-task-processing.md
gc-benchmark/: README.md  __init__.py  config.py  metrics.py  quality.py  reporters.py  run_benchmark.py  runner.py  scenarios.py
jaato/: __init__.py
modlog-training-set-test/: generate_training_set.py
out-of-tree-plugins/moon-phase/: pyproject.toml
out-of-tree-plugins/moon-phase/src/jaato_moon_phase/: plugin.py
profiles.example/base/: profile.json  system_prompt.md
profiles.example/code_assistant/: permissions.json  profile.json  references.json  system_prompt.md
profiles.example/code_assistant/plugin_configs/: cli.json  references.json
profiles.example/code_assistant/references/: coding_standards.md  project_structure.md
profiles.example/research_assistant/: profile.json  system_prompt.md
rich-client/: __init__.py  agent_icons.py  agent_panel.py  agent_registry.py  live_display.py  output_buffer.py  plan_panel.py  plan_reporter.py  pt_display.py  release_name.txt  rich_client.py
shared/: __init__.py  ai_tool_runner.py  jaato_client.py  jaato_session.py  mcp_context_manager.py  modlog_training_pipeline.py  token_accounting.py
shared/plugins/: README.md  __init__.py  base.py  cli.py  mcp.py  registry.py
shared/plugins/artifact_tracker/: plugin.py
shared/plugins/background/: plugin.py
shared/plugins/calculator/: __init__.py  plugin.py
shared/plugins/clarification/: README.md  __init__.py  actors.py  channels.py  demo.yaml  models.py  plugin.py
shared/profiles/: __init__.py  loader.py  models.py
shared/tests/: __init__.py  test_jaato_runtime.py  test_jaato_session.py  test_output_callback.py
simple-client/: README.md  console_presenter.py  file_completer.py  input_handler.py  interactive_client.py  permissions.json  session_exporter.py  terminal_ui.py
simple-connectivity-test/: simple-connectivity-test.py
(+145 files in other folders)
