[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaato"
version = "0.1.0"
description = "Just Another Agentic Tool Orchestrator - experimental LLM tool orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "apanoia"}
]
keywords = ["llm", "ai", "tools", "orchestration", "vertex-ai", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "requests",
    "google-genai",
    "mcp[cli]",
    "google-api-core",
    "google-auth",
    "certifi",
    "python-dotenv",
    "pyreadline3",
    "reportlab",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

# Entry points for plugin discovery
# External packages can register plugins by adding to this group
[project.entry-points."jaato.plugins"]
cli = "shared.plugins.cli:create_plugin"
mcp = "shared.plugins.mcp:create_plugin"
permission = "shared.plugins.permission:create_plugin"
todo = "shared.plugins.todo:create_plugin"
references = "shared.plugins.references:create_plugin"

# Entry points for GC strategy plugins
# GC plugins implement context window garbage collection strategies
[project.entry-points."jaato.gc_plugins"]
gc_truncate = "shared.plugins.gc_truncate:create_plugin"
gc_summarize = "shared.plugins.gc_summarize:create_plugin"
gc_hybrid = "shared.plugins.gc_hybrid:create_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "simple-client*"]
