[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaato-plugin-moon-phase"
version = "1.0.0"
description = "Moon phase calculator plugin for jaato"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "External Developer", email = "developer@example.com" }
]

# Required dependencies
dependencies = [
    # jaato provides type system (ToolSchema, Message, etc.) and base classes
    "jaato>=1.0.0",
]
# Note: This plugin uses only Python standard library beyond jaato

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# Entry point for plugin discovery
# This allows jaato's PluginRegistry to discover the plugin automatically
[project.entry-points."jaato.plugins"]
moon_phase = "jaato_moon_phase:create_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/jaato_moon_phase"]
